--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="/src/scss/style.css.map" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Single Page Application that allows you to buy your favorite coffee without waiting in long line at coffee house."
+    />
+    <link rel="manifest" href="/public/manifest.webmanifest">
     <title>LazyCup</title>
   </head>
   <body>
