--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://kit.fontawesome.com/46b4eff670.js" crossorigin="anonymous"></script>
   </body>
 </html>
