--- a/index.html
+++ b/index.html
@@ -5,23 +5,18 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="/src/scss/style.css.map" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e3d3c4">
+    <meta name="msapplication-TileColor" content="#e3d3c4">
+    <meta name="theme-color" content="#e3d3c4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Single Page Application that allows you to buy your favorite coffee without waiting in long line at coffee house."
     />
-    <link rel="manifest" href="/public/manifest.webmanifest">
     <title>LazyCup</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://kit.fontawesome.com/46b4eff670.js" crossorigin="anonymous"></script>
   </body>
 </html>
